--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Qcxchallenge</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +13,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render partial: 'layouts/shared/header' %>
+    <main role="main">
+      <%= render partial: 'layouts/shared/intro' %>
+      <%= yield %>
+    </main>
   </body>
 </html>
