--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -17,7 +17,7 @@
             <%= link_to "Disciplinas", disciplines_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "Questões", "#", class: 'nav-link' %>
+            <%= link_to "Questões", questions_path(period: 'year'), class: 'nav-link' %>
           </li>
         </ul>
       </div>
